fix: resolve JPA saveAll Null type safety warnings by using individual save operations